@@ -8,10 +8,18 @@ import org.antlr.v4.runtime.atn.*;
 import org.antlr.v4.runtime.dfa.DFA;
 import org.antlr.v4.runtime.misc.*;
 
-@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
+@SuppressWarnings({
+  "all",
+  "warnings",
+  "unchecked",
+  "unused",
+  "cast",
+  "CheckReturnValue",
+  "this-escape"
+})
 class JavascriptLexer extends Lexer {
   static {
-    RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION);
+    RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
   }
 
   protected static final DFA[] _decisionToDFA;
