@@ -189,6 +189,8 @@ Other
 
 * GITHUB#14386: Bump analysis/icu's icu4j dependency to 77.1 (Robert Muir)
 
+* GITHUB#14388: Bump expression's antlr dependency to 4.13.2 (Dawid Weiss, Robert Muir)
+
 ======================= Lucene 10.1.0 =======================
 
 API Changes
